functions/_lists.scss
@use "sass:list";
@use "sass:math";
@use "sass:meta";
@use "sass:string";
@use "./compare";
@use "../config" as c;

$order: c.$order !default;
$unit-order: c.$unit-order !default;

@function sort($list, $order: $order) {
    $sep: list.separator($list);
    $less:  ();
    $equal: ();
    $large: ();

    @if list.length($list) > 1 {
        $seed: list.nth($list, math.ceil(list.length($list) * 0.5));

        @each $item in $list {
            @if $item == $seed {
                $equal: list.append($equal, $item, $sep);
            } @else if compare.lt($item, $seed, $order) {
                $less: list.append($less, $item, $sep);
            } @else if not compare.lt($item, $seed, $order) {
                $large: list.append($large, $item, $sep);
            }
        }

        @return list.join(list.join(sort($less, $order), $equal, $sep), sort($large, $order), $sep);
    }

    @return $list;
}

@function sort-units($list, $order: $unit-order) {
    $sep: list.separator($list);
    $sorted: ();
    @each $unit in $order {
        $matches: ();
        @each $item in $list {
            @if math.unit($item) == $unit {
                $matches: list.append($matches, $item, $sep);
            }
        }
        @if list.length($matches) > 0 {
            $sorted: list.append($sorted, $matches, $sep);
        }
    }
    @return $sorted;
}

@function reverse($list, $recursive: false) {
    $sep: list.separator($list);
    $reversedList: ();
    @for $i from list.length($list) through 1 {
        $item: list.nth($list, $i);
        $recursive: $recursive and meta.type-of($item) == list;
        $reversedList: list.append($reversedList, if($recursive, reverse($item, $recursive), $item), $sep);
    }
    @return $reversedList;
}

@function flatten($list, $recursive: false) {
    $sep: list.separator($list);
    $return: ();
    $max-l: 1;
    @each $sub-list in $list {
        $return: list.join($return, $sub-list, $sep);
        $max-l: math.max($max-l, list.length($sub-list));
    }
    @return if($recursive and $max-l > 1, flatten($return), $return);
}

@function unique($list) {
    $sep: list.separator($list);
    $return: ();
    @each $item in $list {
        @if not(list.index($return, $item)) {
            $return: list.append($return, $item, $sep);
        }
    }
    @return $return;
}

@function join-str($list, $str: "") {
    $return: "";
    @for $i from 1 to list.length($list) {
        $return: $return + list.nth($list, $i) + $str;
    }
    $return: $return + list.nth($list, list.length($list));
    @return $return;
}

@function insert-nth($list, $index, $value) {
    $result: null;

    @if meta.type-of($index) != number {
        @warn "$index: #{string.quote($index)} is not a number for `insert-nth`.";
    } @else if $index < 1 {
        @warn "List index 0 must be a non-zero integer for `insert-nth`";
    } @else if $index > list.length($list) {
        @warn "List index is #{$index} but list is only #{list.length($list)} item long for `insert-nth'.";
    } @else {
        $result: ();

        @for $i from 1 through list.length($list) {
            @if $i == $index {
                $result: list.append($result, $value);
            }

            $result: list.append($result, list.nth($list, $i));
        }
    }

    @return $result;
}

@function depth($list, $starting-depth: 1) {
    $depth: $starting-depth;

    @each $item in $list {
        @if meta.type-of($item) == list {
            $depth: math.max($depth, depth($item, $starting-depth + 1));
        }
    }

    @return $depth;
}

